--- a/js/package.json
+++ b/js/package.json
@@ -4,6 +4,10 @@
 
     "axios": "^1.6.8",
 
+    "config": "^3.3.11",
+
+    "dotenv": "^16.4.5",
+
     "ejs": "^3.1.9",
 
     "engine.io": "^6.5.4",
@@ -11,6 +15,10 @@
     "express": "^4.19.2",
 
     "path": "^0.12.7",
+
+    "php": "^1.0.2",
+
+    "php-express": "^0.0.3",
 
     "readline": "^1.3.0",
 
